2012-04-06 belangeo <belangeo@gmail.com>

    * Added new object : OscListReceive. Handles list of floats from OSC as audio streams.
    - rev 914

2012-04-03 belangeo <belangeo@gmail.com>

    * Added functionalities to OSC objects (add, remove, setInterpolation, etc.).
    - rev 913

-------------------------------------------------------------------------------------

2012-01-03 belangeo <belangeo@gmail.com>

    * rev 807 - Updated version number, release tag: 0.6.0.

2011-12-22 belangeo <belangeo@gmail.com>

    * Added new object: MToT. Midi to transposition factor conversion.
    - rev 805

2011-12-20 belangeo <belangeo@gmail.com>

    * Added new objects: XnoiseDur,  Recursive time varying X-class pseudo-random generator. SincTable, sinc window function.
    - rev 803

2011-12-19 belangeo <belangeo@gmail.com>

    * Added new object: VoiceManager. Polyphony voice manager.
    - rev 802

2011-12-14 belangeo <belangeo@gmail.com>

    * Added downsamp() function. Sampling rate conversion of a soundfile.
    - rev 798

2011-12-13 belangeo <belangeo@gmail.com>

    * Added upsamp() function. Sampling rate conversion of a soundfile.
    - rev 797

2011-12-13 belangeo <belangeo@gmail.com>

    * Added copy() method to the PyoTableObject.
    - rev 796

2011-12-12 belangeo <belangeo@gmail.com>

    * Added reverse() method to the PyoTableObject.
    - rev 795

2011-12-11 belangeo <belangeo@gmail.com>

    * Added removeDC() method to the PyoTableObject.
    - rev 794

2011-12-07 belangeo <belangeo@gmail.com>

    * Added new object: Biquada. Biquadratric filter controlled with filter's coefficients.
    - rev 793

2011-12-05 belangeo <belangeo@gmail.com>

    * Added new function: distanceToSegment. Find the distance from a point to a line or line segment.
    - rev 790

2011-11-29 belangeo <belangeo@gmail.com>

    * Added new object: Iter. Triggers iterate over a list of user-defined values.
    - rev 784

2011-11-26 belangeo <belangeo@gmail.com>
